# sheety_send

./: .env.example  Cargo.toml  README.md  sheet_ata.xlsx  sheet_data.xlsx
.github/workflows/: rust.yml
src/: config.rs  email.rs  main.rs  spreadsheet.rs
