[package]
name = "sheety_send"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
chrono = "0.4"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
